--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "history": "5.3.0",
     "immer": "9.0.14",
     "lodash": "4.17.21",
-    "moment": "2.29.3",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-app-rewired": "2.2.1",
     "react-beautiful-dnd": "13.1.0",
@@ -22,7 +22,7 @@
     "react-native-web": "0.17.7",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "9.0.2",
     "redux": "4.2.0",
     "redux-saga": "1.1.3",
@@ -55,6 +55,6 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-module-resolver": "4.1.0"
+    "babel-plugin-module-resolver": "^5.0.0"
   }
 }
