--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,30 @@
 {
   "name": "agcs-taskmanager-backend",
   "version": "0.0.0",
-  "private": true,
+  "private": "false",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "cookie-parser": "1.4.3",
-    "debug": "2.6.9",
-    "express": "4.16.0",
-    "http-errors": "1.6.2",
-    "jade": "1.11.0",
-    "morgan": "1.9.0",
     "aws-sdk": "2.1066.0",
     "bcrypt": "5.0.1",
+    "cookie-parser": "1.4.3",
     "cors": "2.8.5",
-    "express-jwt": "6.1.0",
-    "jsonwebtoken": "8.5.1",
+    "debug": "2.6.9",
+    "express": "^4.18.2",
+    "express-jwt": "^8.4.0",
+    "http-errors": "1.6.2",
+    "jade": "^1.9.2",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "4.17.21",
     "mime-types": "2.1.34",
-    "mongoose": "6.1.8",
+    "mongoose": "^6.9.0",
+    "morgan": "^1.10.0",
     "multer": "1.4.4",
     "onesignal-node": "3.3.0",
-    "passport": "0.5.2",
+    "passport": "^0.6.0",
     "passport-local": "1.0.0",
-    "socket.io": "4.4.1"
+    "socket.io": "^4.5.4"
   }
 }
