--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agcs-taskmanager-backend",
+  "name": "agcs-projectmanagement-backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "aws-sdk": "2.1066.0",
+    "aws-sdk": "^2.1066.0",
     "bcrypt": "5.0.1",
     "cookie-parser": "1.4.3",
     "cors": "2.8.5",
@@ -22,6 +22,7 @@
     "mongoose": "6.1.8",
     "morgan": "1.9.0",
     "multer": "1.4.4",
+    "onesignal-node": "3.3.0",
     "passport": "0.5.2",
     "passport-local": "1.0.0",
     "socket.io": "4.4.1"
