--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,19 @@
     "@testing-library/user-event": "13.5.0",
     "antd": "4.20.6",
     "axios": "0.27.2",
+    "bootstrap": "^5.2.3",
     "classnames": "2.3.1",
+    "customize-cra": "^1.0.0",
     "history": "5.3.0",
     "immer": "9.0.14",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "lodash": "4.17.21",
     "moment": "^2.29.4",
     "react": "18.1.0",
-    "react-app-rewired": "2.2.1",
+    "react-app-rewired": "^2.2.1",
     "react-beautiful-dnd": "13.1.0",
+    "react-bootstrap": "^2.7.0",
     "react-circular-progressbar": "2.0.4",
     "react-dom": "18.1.0",
     "react-native-gifted-chat": "0.16.3",
