--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agcs-taskmanage-frontend",
+  "name": "agcs-projectmanagement-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +17,7 @@
     "less-loader": "^11.1.0",
     "lodash": "4.17.21",
     "moment": "^2.29.4",
+    "rc-footer": "^0.6.8",
     "react": "18.1.0",
     "react-app-rewired": "^2.2.1",
     "react-beautiful-dnd": "13.1.0",
