--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,9 +2,13 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
-        "use": "@vercel/node"
+        "src": "package.json",
+        "use": "vercel-sapper",
+        "config": {
+          "build": false
+        }
       }
+
     ],
     "routes": [
       {
