--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,6 @@
     "onesignal-node": "3.3.0",
     "passport": "0.5.2",
     "passport-local": "1.0.0",
-    "socket.io": "4.4.1",
-    "vercel-sapper": "^0.44.0"
+    "socket.io": "4.4.1"
   }
 }
