--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "4.16.0",
     "express-jwt": "6.1.0",
     "http-errors": "1.6.2",
+    "jade": "^1.11.0",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
     "mime-types": "2.1.34",
@@ -24,6 +25,7 @@
     "onesignal-node": "3.3.0",
     "passport": "0.5.2",
     "passport-local": "1.0.0",
+    "pug": "^3.0.2",
     "socket.io": "4.4.1"
   }
 }
